[gd_scene load_steps=15 format=3 uid="uid://dp7nc3htiarim"]

[ext_resource type="PackedScene" uid="uid://c3cpm0goxpepr" path="res://enemies/enemy.tscn" id="1_cuioq"]
[ext_resource type="Script" path="res://enemies/bunny_boss.gd" id="2_cemqd"]
[ext_resource type="Texture2D" uid="uid://bibo3libt5cmj" path="res://assets/boss/bunny/Rabbit_Attack/Rabbit_Attack_Frame01.png" id="2_lf0ex"]
[ext_resource type="Texture2D" uid="uid://c8bjopyqyikbl" path="res://assets/boss/bunny/Rabbit_Attack/Rabbit_Attack_Frame02.png" id="3_tp7nr"]
[ext_resource type="Texture2D" uid="uid://bhdiq72a8pa2a" path="res://assets/boss/bunny/Rabbit_Default/Rabbit_Default_Frame01.png" id="4_edmtp"]
[ext_resource type="Texture2D" uid="uid://cqu2w8gpmhc5" path="res://assets/boss/bunny/Rabbit_Default/Rabbit_Default_Frame02.png" id="5_paguq"]
[ext_resource type="Texture2D" uid="uid://bhjbbserwyxu4" path="res://assets/boss/bunny/Rabbit_Default/Rabbit_Default_Frame03.png" id="6_k3a2y"]
[ext_resource type="Texture2D" uid="uid://bqmm5mjbjbms5" path="res://assets/boss/bunny/Rabbit_Default/Rabbit_Default_Frame04.png" id="7_h44tr"]
[ext_resource type="Script" path="res://components/move_component.gd" id="9_aqre3"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="10_f332c"]
[ext_resource type="PackedScene" uid="uid://dolv26ksf5ecg" path="res://projectile/bunny_projectile.tscn" id="11_xqyu4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ejjph"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lf0ex")
}, {
"duration": 1.0,
"texture": ExtResource("3_tp7nr")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_edmtp")
}, {
"duration": 1.0,
"texture": ExtResource("5_paguq")
}, {
"duration": 1.0,
"texture": ExtResource("6_k3a2y")
}, {
"duration": 1.0,
"texture": ExtResource("7_h44tr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvigb"]
size = Vector2(336, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m61tb"]
size = Vector2(240, 568)

[node name="BunnyBoss" instance=ExtResource("1_cuioq")]
position = Vector2(968, 184)
scale = Vector2(0.5, 0.5)
script = ExtResource("2_cemqd")
move_speed = 100.0
bullet_speed = 300.0
bullet_count = 8
split_health_threshold = 0.5

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_ejjph")
autoplay = "default"
frame_progress = 0.0404466

[node name="VisibleOnScreenNotifier2D" parent="." index="3"]
position = Vector2(4.00001, -72)
scale = Vector2(18, 31.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -76)
shape = SubResource("RectangleShape2D_pvigb")

[node name="MoveComponent2" type="Node" parent="." index="12" node_paths=PackedStringArray("actor")]
script = ExtResource("9_aqre3")
actor = NodePath("..")

[node name="AttackTimer" type="Timer" parent="." index="13"]

[node name="SpawnerComponent2" type="Node2D" parent="." index="14"]
script = ExtResource("10_f332c")
scene = ExtResource("11_xqyu4")

[node name="MoveTimer" type="Timer" parent="." index="15"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LaserHitbox" index="0"]
position = Vector2(-2, -78)
shape = SubResource("RectangleShape2D_m61tb")
